traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    elastic-eck/ca-elasticsearch: "true"
